--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --text-color: #eee;
   --bg-color: #24263d;
   --bg-accent: #343551;
+  --hover-bg: #47496e;
   --active: #3199ee;
   --deactive: #757694;
   --border-radius: 40px;
