--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -12,6 +12,10 @@
   padding: 2px 0;
 }
 
+.title {
+  text-transform: capitalize;
+}
+
 .subtitle {
   color: var(--subtitle-color);
   font-size: var(--subtitle-size);
@@ -32,4 +36,39 @@
 
 .stream-btn button i {
   padding: 0 5px;
+  font-size: 10px;
+}
+
+/* main component */
+.main-component {
+  margin: 3% 0;
+}
+
+/* Component header */
+.component-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: var(--h2);
+}
+
+.component-header .sliding-nav {
+  display: flex;
+}
+
+.component-header .sliding-nav .left-arrow {
+  margin-right: 20px;
+}
+
+.component-header .sliding-nav button {
+  border: none;
+  border-radius: 4px;
+  background-color: transparent;
+  color: var(--deactive);
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+.component-header .sliding-nav button:hover {
+  background-color: var(--hover-bg);
 }
