--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -41,7 +41,7 @@
 
 /* main component */
 .main-component {
-  margin: 3% 0;
+  margin: 30px 0;
 }
 
 /* Component header */
@@ -71,4 +71,120 @@
 
 .component-header .sliding-nav button:hover {
   background-color: var(--hover-bg);
+}
+
+/* component body */
+.component-body-container {
+  width: 100%;
+  margin-top: 25px;
+}
+
+.component-body {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+}
+
+.component {
+  padding: 10px;
+  margin-right: 25px;
+  border-radius: 16px;
+  position: relative;
+  cursor: pointer;
+}
+
+.component .char-img {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 80px;
+  height: 200px;
+}
+
+.component .data {
+  font-weight: bold;
+  line-height: 1.5;
+  position: relative;
+  z-index: 9;
+}
+
+.component .data .subtitle {
+  font-size: 12px;
+}
+
+/* popular games */
+.popular-games .component {
+  min-width: 150px;
+  min-height: 120px;
+  margin-top: 80px;
+  display: flex;
+  align-items: flex-end;
+}
+
+/* top channels */
+.top-channels .component {
+  border: solid red 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.top-channels .component .avatar {
+  margin-right: 10px;
+  position: relative;
+}
+
+.top-channels .component .avatar .status {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.top-channels .component .meta {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.top-channels .online {
+  background-color: #008000;
+}
+
+.top-channels .offline {
+  background-color: #ccc;
+}
+
+/* trending */
+.trending .video-player {
+  position: relative;
+}
+
+.trending .video-player .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 4px);
+  border: solid var(--bg-color) 1px;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.trending .video-player .control-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9;
+}
+
+.trending .video-player video {
+  width: 326px;
+  height: 186px;
+  border: solid var(--bg-color) 1px;
+  border-radius: 20px;
 }
