--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -77,6 +77,12 @@
 .component-body-container {
   width: 100%;
   margin-top: 25px;
+  padding: 10px 0;
+  overflow: auto;
+}
+
+::-webkit-scrollbar {
+  display: none; /*---Chrome and Safari*/
 }
 
 .component-body {
@@ -114,7 +120,7 @@
 
 /* popular games */
 .popular-games .component {
-  min-width: 150px;
+  min-width: 160px;
   min-height: 120px;
   margin-top: 80px;
   display: flex;
@@ -123,7 +129,6 @@
 
 /* top channels */
 .top-channels .component {
-  border: solid red 1px;
   display: flex;
   align-items: center;
   justify-content: center;
